fixing range and yzero issues where barcharts with negative values would have top of chart cut off

--- a/demo.html
+++ b/demo.html
@@ -294,6 +294,7 @@
  
             <p> 
                 Bar charts
+                <span class="bar">-198,-112,-334,-111,90</span>,
                 <span class="bar">10,8,9,3,5,8,5</span>,
                 <span class="bar">1,2,4,8</span>,
                 <span class="bar">3,2,1</span>,
