--- a/demo.html
+++ b/demo.html
@@ -36,7 +36,7 @@
         /** Draw all the example charts on the page **/
  
         // Bar + line composite charts
-        $('#compositebar').sparkline('html', { type: 'bar', barColor: '#aaf' });
+        $('#compositebar').sparkline('html', { type: 'bar', barColor: '#aaf'});
         $('#compositebar').sparkline([4,1,5,7,9,9,8,7,6,6,4,7,8,4,3,2,2,5,6,7], { composite: true, fillColor: false, lineColor: 'red' });
  
         // Line charts taking their values from the tag
@@ -49,7 +49,7 @@
         $('#linecustom').sparkline('html', {height: '1.5em', width: '8em', lineColor: '#f00', fillColor: '#ffa', minSpotColor: false, maxSpotColor: false, spotColor: '#77f', spotRadius: 3});
  
         // Bar charts using inline values
-        $('.bar').sparkline('html', {type: 'bar'});
+        $('.bar').sparkline('html', {type: 'bar', zeroAxis: true});
 
         // Stacked bar charts
         $('.stackedbar').sparkline('html', {type: 'stackedbar'});
@@ -294,7 +294,7 @@
  
             <p> 
                 Bar charts
-                <span class="bar">-198,-112,-334,-111,90</span>,
+                <span class="bar">0,-198,-112,-334,-111,0</span>,
                 <span class="bar">10,8,9,3,5,8,5</span>,
                 <span class="bar">1,2,4,8</span>,
                 <span class="bar">3,2,1</span>,
