remove zeroAxis on demo page

--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,7 @@
         $('#linecustom').sparkline('html', {height: '1.5em', width: '8em', lineColor: '#f00', fillColor: '#ffa', minSpotColor: false, maxSpotColor: false, spotColor: '#77f', spotRadius: 3});
  
         // Bar charts using inline values
-        $('.bar').sparkline('html', {type: 'bar', zeroAxis: true});
+        $('.bar').sparkline('html', {type: 'bar'});
 
         // Stacked bar charts
         $('.stackedbar').sparkline('html', {type: 'stackedbar'});
